11-06-19

Move generated claim settlement files to the outbox as per Ed Broking instructions (on success message from Brokasure)

Textarea and defaults on Excel forms, first try at case insensitivity on file heading lookups

Number of names adjusted, derived from provenance after uploading the file

Altered search for a definitive header. Old logic - if no 'attributesubject' (i.e. heading with 'language' other than date defined), then look for hading with no attribute OR heading with language date.
New logic = after defining all headings, check all those with language 'date'. If those headings are not matched with a heading which 'isAttributeSubject' or has no attribute, then they become 'isAttributeSubject'

More efficient values modified count, start of work to remove typed pair, more properties for new Ed Broking servers

Work to enable executing 'set' instruction to 'set' values as well as sets.

Enabling execute and XML on form submit in Excel

31-05-19

Further Excel Controller form work - date picker and autocomplete

Work on lookup to allow provisional lookups to use the best guess, and to use the best guess when no end is specified.

Clean up xlsx files which Brokasure didn't pick up.

10-05-19

Tightened RMI concurrency code, Excel controller work to enable the new manual entry forms in plugin

09-05-19

Add download option for XML, fix build error from CSV

08-05-19

Bug fixes, updated ZSS developer license

07-05-19

! Due to cross domain session limitations old session code has been reinstated for the Excel plugin.

Fix bugs in 'bestnamematch'

03-05-19

Bug fixing, removing limit on number of xml files generated

01-05-19

! File handler leak fixed

29-04-19

Report list sort now on Category and Explanation

Further Brokasure XML work, to read data back in. Currently untested.

25-04-19

XML work to export to a directory and for the XML to reference the XLSX file by name

23-04-19

NPE bug fix

18-04-19

Instead of base 64 hashes use simple digits
